# launchtype

./: .flake8  .gitignore  .pylintrc  CLAUDE.md  Cargo.toml  README.es.md  README.md  commands - Copy.json  commands.json  compile_translations.py  main.spec  notes.txt  pyproject.toml  release.ps1  requirements.txt  test_search.py
.github/: .flake8.txt
.github/workflows/: release.yml
accessible_output2/: __init__.py
accessible_output2/outputs/: __init__.py  auto.py  base.py  dolphin.py  e_speak.py  jaws.py  pc_talker.py  sapi4.py  sapi5.py  speech_dispatcher.py  voiceover.py  window_eyes.py  zdsr.py
assets/locale/es/LC_MESSAGES/: launchtype.mo  launchtype.po
assets/sounds/: alarm.flac
crates/launchtype-app/: Cargo.toml  build.rs
crates/launchtype-app/src/: ai_flows.rs  controller.rs  dialogs.rs  hotkey.rs  main.rs  shell.rs  speech.rs  ssh_flows.rs
crates/launchtype-core/: Cargo.toml
crates/launchtype-core/src/: ai_auth.rs  alarms.rs  clipboard_history.rs  clock.rs  i18n.rs  imaging.rs  lib.rs  mode.rs  model.rs  search.rs  settings.rs  speech.rs  stats.rs  steam.rs  storage.rs  timers.rs
crates/launchtype-core/src/realtime/: history.rs  market.rs  mod.rs  number.rs  rss.rs  temperatures.rs  usage.rs  weather.rs
crates/launchtype-services/: Cargo.toml
crates/launchtype-services/src/: alerts.rs  clipboard.rs  lib.rs  notebrook.rs  poller.rs  realtime.rs  runner.rs  scheduler.rs  screenshot.rs  snippets.rs  sounds.rs  ssh.rs  steam.rs  stores.rs
crates/launchtype-services/src/ai/: claude.rs  codex.rs  mod.rs  parse.rs
crates/prism/: Cargo.toml
crates/prism-sys/: Cargo.toml  build.rs
crates/prism-sys/src/: lib.rs
crates/prism/src/: lib.rs
doc/: readme.html
docs/: manual-qa.md
locale/es/LC_MESSAGES/: launchtype.mo  launchtype.po
scripts/: bundle-mac.sh  check_msgids.py  compile_catalog.py  deploy.ps1
sounds/: filetx_complete.flac
src/: language_handler.py  main.py  utility_functions.py
src/enums/: command_type.py  ui_mode.py
src/helpers/: alert_notifier.py  json_storage.py  playsound.py  plist_helper.py  search_utility.py  sound_player.py
src/keyboard_handler/: __init__.py  global_handler.py  key_constants.py  linux.py  main.py  osx.py  windows.py  wx_handler.py
src/managers/: command_line_parameters.py  data_manager.py  main_window.py  settings_manager.py  ui_manager.py  window_manager.py
src/services/: alarm_service.py  clipboard_history.py  notebrook_service.py  realtime_service.py  runner_service.py  screenshot_service.py  speech_service.py  steam_scanner.py  timer_service.py
src/ui/: __builtins__.pyi  add_alarm_dialog.py  add_dialog.py  add_snippet_dialog.py  add_timer_dialog.py  command_edition_dialog.py  notebrook_credentials_dialog.py  settings_dialog.py
