[workspace]
resolver = "2"
members = [
    "crates/prism-sys",
    "crates/prism",
    "crates/launchtype-core",
    "crates/launchtype-services",
    "crates/launchtype-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.92"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
log = "0.4"

[profile.release]
lto = "thin"
strip = "symbols"
