[project]
name = "launchtype"
version = "1.0.0"
description = "A launcher to quickly launch commands (applications) with or without command line arguments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "platform_utils",
    "accessible_output2",
    "libloader",
    "pyperclip",
    "wxpython",
    "babel",
]

[project.optional-dependencies]
build = [
    "pyinstaller",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "accessible_output2"]

[dependency-groups]
dev = [
    "pyinstaller",
]
