[package]
name = "launchtype"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "launchtype"
path = "src/main.rs"

[dependencies]
launchtype-core = { path = "../launchtype-core" }
launchtype-services = { path = "../launchtype-services" }
prism = { path = "../prism" }
serde_json.workspace = true
chrono.workspace = true
log.workspace = true
wxdragon = "0.9"
global-hotkey = "0.7"
open = "5"
uuid.workspace = true
gettext = "0.4"
sys-locale = "0.3"
env_logger = "0.11"

[target.'cfg(windows)'.build-dependencies]
embed-manifest = "1.4"
