[package]
name = "launchtype-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
base64 = "0.22"
gettext = "0.4"
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
log.workspace = true

[dev-dependencies]
tempfile = "3"
