[package]
name = "launchtype-services"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
launchtype-core = { path = "../launchtype-core" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
log.workspace = true
