[package]
name = "launchtype-services"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
launchtype-core = { path = "../launchtype-core" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
log.workspace = true
plist = "1"
clipboard-rs = "0.3"
ureq = "2"
base64 = "0.22"
dirs = "6"
xcap = "0.8"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
russh = { version = "0.62", default-features = false, features = ["ring", "rsa", "flate2"] }
tokio = { version = "1", default-features = false, features = ["rt", "net", "time", "io-util", "sync"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3"
